<resources>
    <string name="app_name">D&amp;D-Assist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Einstellungen</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="Wuerfelart">Würfelart: </string>
    <string name="min1">-1</string>
    <string name="min5">-5</string>
    <string name="add1">+1</string>
    <string name="add5">+5</string>
    <string name="zero">0</string>
    <string name="anzahl">Anzahl: </string>
    <string name="races">Rassen</string>
    <string name="classes">Klassen</string>
    <string name="background">Hintergründe</string>
    <string name="items">Gegenstände</string>
    <string name="spells">Zauber</string>
    <string name="feats">Talente</string>
    <string name="monster">Monster</string>
    <string name="fivee">5etools</string>
    <string name="home">Home</string>
    <string name="search">Suchen</string>
    <string name="note">Notizen</string>
    <string name="dice">Würfel</string>


</resources>