<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DiceFragment">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/whiteback"
            android:gravity="center"
            android:text="@string/Wuerfelart"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/whiteback"
            android:spinnerMode="dropdown" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:translationY="70dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding= "10dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteback"
                android:onClick="dices"
                android:text="@string/min1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteback"
                android:onClick="dices"
                android:text="@string/min5"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/whiteback"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/anzahl"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/whiteback"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteback"
                android:onClick="dices"
                android:text="@string/add1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteback"
                android:onClick="dices"
                android:text="@string/add5"
                android:textSize="18sp" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:translationY="185dp">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/whiteback"
            android:onClick="roll"
            android:text="Würfeln"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:translationY="290dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/whiteback"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </TableRow>

</FrameLayout>